...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="Login" title="Login" id="BYZ-38-t0r" customClass="LoginVC" customModule="CoursePlanner" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                <rect key="frame" x="62.666666666666657" y="322" width="290" height="40"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3CO-9t-L0f" customClass="TextField" customModule="CoursePlanner" customModuleProvider="target">
                                        <rect key="frame" x="40" y="0.0" width="250" height="40"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="62.666666666666657" y="370" width="290" height="40"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0nW-i7-7ch" customClass="TextField" customModule="CoursePlanner" customModuleProvider="target">
                                        <rect key="frame" x="40" y="0.0" width="250" height="40"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="16" y="11" width="30" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="◀︎">
                                    <color key="titleColor" name="ButtonColor"/>
                                </state>
...
                                <color key="tintColor" name="ButtonColor"/>
                                <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                <state key="normal" title="Build"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search for classes" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rxd-Qk-4x2">
                                        <rect key="frame" x="40.333333333333343" y="0.0" width="321.66666666666663" height="48"/>
                                        <color key="tintColor" name="HighlightColor"/>
...
                                        <color key="tintColor" name="HighlightColor"/>
                                        <inset key="imageEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                        <state key="normal" image="Cross"/>
                                        <connections>
                                            <action selector="clearField:" destination="tN9-yH-7gg" eventType="touchUpInside" id="urR-kV-AC1"/>
...
                                        <color key="tintColor" name="ButtonColor"/>
                                        <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                        <state key="normal" title="Details"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
