...
        for subView in subviews {
            subView.removeFromSuperview()
        }

        if schedule == nil || schedule.sections.isEmpty {
            let noScheduleLabel = UILabel(frame: CGRect(x: 32, y: rect.height/2-50, width: rect.width-64, height: 100))
            noScheduleLabel.text = "No Schedule"
            noScheduleLabel.textColor = .lightGray
            noScheduleLabel.font = UIFont.systemFont(ofSize: 40, weight: .heavy)
            noScheduleLabel.adjustsFontSizeToFitWidth = true
            noScheduleLabel.textAlignment = .center
            insertSubview(noScheduleLabel, at: 0)
            return
...
